Contacts and profile full

--- a/#src/order-status.html
+++ b/#src/order-status.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	@@include('_links.html')
 	<meta name="description" content="Сладости - один из лучших магазинов в Беларуси по продаже товаров">
-	<title>Каталог товаров</title>
+	<title>Мои заказы</title>
 </head>
 
 <body>
@@ -15,13 +15,98 @@
 
 		<main class="main wrapper__content">
 
+			<!-- Страница мои заказы -->
 			<div class="order-status">
 				<div class="container">
 					<div class="order-status__inner">
-						
+						<h2 class="order-status__title title-large">Мои заказы</h2>
+
+						<div class="order-status__box">
+							<h3 class="order-status__box-title">Активные заказы</h3>
+							<div class="order-status__item-wrapper">
+								<div class="order-status__item">
+									<div class="order-status__image-wrapper">
+										<img class="order-status__image" src="img/home-publications/product.jpg" alt="Продукт">
+									</div>
+									<div class="order-status__info">
+										<div class="order-status__info-number">№16859743871691</div>
+										<div class="order-status__info-date">12.05.2020 г.</div>
+										<div class="order-status__info-status">Завершён</div>
+									</div>
+								</div>
+								<div class="order-status__item">
+									<div class="order-status__image-wrapper">
+										<img class="order-status__image" src="img/home-publications/product.jpg" alt="Продукт">
+									</div>
+									<div class="order-status__info">
+										<div class="order-status__info-number">№16859743871691</div>
+										<div class="order-status__info-date">12.05.2020 г.</div>
+										<div class="order-status__info-status">Завершён</div>
+									</div>
+								</div>
+								<div class="order-status__item">
+									<div class="order-status__image-wrapper">
+										<img class="order-status__image" src="img/home-publications/product.jpg" alt="Продукт">
+									</div>
+									<div class="order-status__info">
+										<div class="order-status__info-number">№16859743871691</div>
+										<div class="order-status__info-date">12.05.2020 г.</div>
+										<div class="order-status__info-status">Завершён</div>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="order-status__box">
+							<h3 class="order-status__box-title">Завершенные заказы</h3>
+							<div class="order-status__item-wrapper">
+								<div class="order-status__item">
+									<div class="order-status__image-wrapper">
+										<img class="order-status__image" src="img/home-publications/product.jpg" alt="Продукт">
+									</div>
+									<div class="order-status__info">
+										<div class="order-status__info-number">№16859743871691</div>
+										<div class="order-status__info-date">12.05.2020 г.</div>
+										<div class="order-status__info-status">Завершён</div>
+									</div>
+								</div>
+								<div class="order-status__item">
+									<div class="order-status__image-wrapper">
+										<img class="order-status__image" src="img/home-publications/product.jpg" alt="Продукт">
+									</div>
+									<div class="order-status__info">
+										<div class="order-status__info-number">№16859743871691</div>
+										<div class="order-status__info-date">12.05.2020 г.</div>
+										<div class="order-status__info-status">Завершён</div>
+									</div>
+								</div>
+								<div class="order-status__item">
+									<div class="order-status__image-wrapper">
+										<img class="order-status__image" src="img/home-publications/product.jpg" alt="Продукт">
+									</div>
+									<div class="order-status__info">
+										<div class="order-status__info-number">№16859743871691</div>
+										<div class="order-status__info-date">12.05.2020 г.</div>
+										<div class="order-status__info-status">Завершён</div>
+									</div>
+								</div>
+								<div class="order-status__item">
+									<div class="order-status__image-wrapper">
+										<img class="order-status__image" src="img/home-publications/product.jpg" alt="Продукт">
+									</div>
+									<div class="order-status__info">
+										<div class="order-status__info-number">№16859743871691</div>
+										<div class="order-status__info-date">12.05.2020 г.</div>
+										<div class="order-status__info-status">Завершён</div>
+									</div>
+								</div>
+							</div>
+						</div>
+
 					</div>
 				</div>
 			</div>
+			<!-- Страница мои заказы END -->
 
 		</main>
 
