--- a/#src/contact.html
+++ b/#src/contact.html
@@ -23,22 +23,22 @@
 						<div class="contact-page__sidebar">
 							<ul class="contact-page__list">
 								<li class="contact-page__item">
-									<div class="contact-page__image" style="background-image: url(../img/icons/icons.svg#book);"></div>
+									<div class="contact-page__image" style="background-image: url(img/icons/icons.svg#book);"></div>
 									<div class="contact-page__item-title">График работы</div>
 									<div class="contact-page__item-value">С 7:00 до 23:00, ежедневно</div>
 								</li>
 								<li class="contact-page__item">
-									<div class="contact-page__image" style="background-image: url(../img/icons/icons.svg#envelope-2);"></div>
+									<div class="contact-page__image" style="background-image: url(img/icons/icons.svg#envelope-2);"></div>
 									<div class="contact-page__item-title">Электронная почта</div>
 									<a class="contact-page__item-value contact-page__item-link" href="mailto:Potokinvest@gmail.com">Potokinvest@gmail.com</a>
 								</li>
 								<li class="contact-page__item">
-									<div class="contact-page__image" style="background-image: url(../img/icons/icons.svg#geo);"></div>
+									<div class="contact-page__image" style="background-image: url(img/icons/icons.svg#geo);"></div>
 									<div class="contact-page__item-title">Наши магазины</div>
 									<address class="contact-page__item-value">г.Минск, ст.м.Кунцевщина (Подземный переход)</address>
 								</li>
 								<li class="contact-page__item">
-									<div class="contact-page__image" style="background-image: url(../img/icons/icons.svg#contact-phone);"></div>
+									<div class="contact-page__image" style="background-image: url(img/icons/icons.svg#contact-phone);"></div>
 									<div class="contact-page__item-title">Контактный телефон</div>
 									<a class="contact-page__item-value contact-page__item-link" href="+375295747736">+ 375 29 574 77 36</a>
 								</li>
